--- a/src/assets/sender.html
+++ b/src/assets/sender.html
@@ -60,8 +60,8 @@
     <p>Отправить сообщение в WebSocket по ID через HTTP запрос</p>
 
     <div>
-      <label>Target ID: <input type="number" id="targetId" value="1" /></label
-      ><br />
+      <label>Target ID: <input type="number" id="targetId" value="1" /></label>
+      <br />
       <button onclick="sendEvent()">Отправить тестовое сообщение</button>
     </div>
 
