--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -2,34 +2,45 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>WebSocket Test</title>
+    <title>WebSocket & SSE Test</title>
     <style>
       body {
         font-family: Arial, sans-serif;
-        max-width: 800px;
+        max-width: 1000px;
         margin: 50px auto;
         padding: 20px;
       }
       h1 {
         color: #333;
       }
+      .section {
+        margin: 30px 0;
+      }
+      .section h2 {
+        color: #666;
+        border-bottom: 2px solid #0066cc;
+        padding-bottom: 10px;
+      }
       .links {
         display: flex;
         gap: 20px;
-        margin-top: 30px;
+        flex-wrap: wrap;
       }
       .card {
         border: 1px solid #ddd;
         padding: 20px;
         border-radius: 8px;
         flex: 1;
+        min-width: 300px;
       }
-      .card h2 {
+      .card h3 {
         margin-top: 0;
+        color: #0066cc;
       }
       a {
         color: #0066cc;
         text-decoration: none;
+        font-weight: bold;
       }
       a:hover {
         text-decoration: underline;
@@ -37,18 +48,37 @@
     </style>
   </head>
   <body>
-    <h1>WebSocket Test Server</h1>
-    <p>Выберите страницу для тестирования:</p>
-    <div class="links">
-      <div class="card">
-        <h2>WebSocket Client</h2>
-        <p>Подключитесь к WebSocket и отправляйте/получайте сообщения</p>
-        <a href="/ws-client">Открыть клиент →</a>
+    <h1>WebSocket & SSE Test Server</h1>
+
+    <div class="section">
+      <h2>WebSocket</h2>
+      <div class="links">
+        <div class="card">
+          <h3>WebSocket Client</h3>
+          <p>Подключитесь к WebSocket и отправляйте/получайте сообщения</p>
+          <a href="/ws-client">Открыть клиент →</a>
+        </div>
+        <div class="card">
+          <h3>WebSocket Sender</h3>
+          <p>Отправляйте сообщения в конкретный WebSocket по ID</p>
+          <a href="/ws-sender">Открыть отправитель →</a>
+        </div>
       </div>
-      <div class="card">
-        <h2>WebSocket Sender</h2>
-        <p>Отправляйте сообщения в конкретный WebSocket по ID</p>
-        <a href="/ws-sender">Открыть отправитель →</a>
+    </div>
+
+    <div class="section">
+      <h2>Server-Sent Events (SSE)</h2>
+      <div class="links">
+        <div class="card">
+          <h3>SSE Client</h3>
+          <p>Подключитесь к SSE потоку и получайте серверные события</p>
+          <a href="/sse-client">Открыть клиент →</a>
+        </div>
+        <div class="card">
+          <h3>SSE Sender</h3>
+          <p>Отправляйте события в конкретный SSE поток по ID</p>
+          <a href="/sse-sender">Открыть отправитель →</a>
+        </div>
       </div>
     </div>
   </body>
